samples/_failures_safe/1761256501_c22385_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_82def908.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_82def908.c:154:5: error: expected declaration or statement at end of input
  154 |     if (parser == NULL) return;
      |     ^~
